# comm

./: .dockerignore  .eslintrc.json  .gitignore  README.md  flake.nix
.buildkite/: android.yml  cmakecheck.yml  docker_keyserver.yml  eslint_flow_jest.yml  identity_build.yml  services.yml  shellcheck.yml
.github/workflows/: services_ci.yml
docs/: dev_environment.md  dev_services.md  nix_dev_env.md
keyserver/: Dockerfile  docker-compose.yml  package.json
keyserver/bash/: backup-phabricator.sh  deploy.sh  scp-backup.sh  source-nvm.sh
keyserver/src/: keyserver.js
landing/: footer.css  global.css  header.css  info-block.css  package.json  read-docs-btn.css  root.js  subscription-form.css
lib/facts/: genesis.json
lib/hooks/: inline-sidebar-text.react.js  promote-sidebar.react.js  search-sidebars.js
lib/media/: file-utils.js
lib/reducers/: message-reducer.js  thread-reducer.js
lib/shared/: search-utils.js  thread-utils.js  thread-utils.test.js
lib/utils/: action-utils.js  text-utils.js  text-utils.test.js  url-utils.js
native/: .flowconfig  package.json
native/android/app/: CMakeLists.txt  build.gradle
native/android/app/src/cpp/: MessageOperationsUtilitiesJNIHelper.cpp  ThreadOperationsJNIHelper.cpp  jsiInstaller.cpp
native/android/app/src/main/java/app/comm/android/: CommNotificationsHandler.java
native/android/app/src/main/java/app/comm/android/fbjni/: CommSecureStore.java  MessageOperationsUtilities.java  ThreadOperations.java
native/chat/: chat-thread-list.react.js  compose-subchannel.react.js  composed-message.react.js  inline-engagement.react.js  inner-text-message.react.js
native/components/: color-selector-button.react.js  color-selector.react.js
native/cpp/: CMakeLists.txt
native/cpp/CommonCpp/: CMakeLists.txt
native/cpp/CommonCpp/CryptoTools/: CMakeLists.txt
native/cpp/CommonCpp/CryptoTools/opaque-ke-cxx/: Cargo.toml
native/cpp/CommonCpp/DatabaseManagers/: CMakeLists.txt
native/cpp/CommonCpp/NativeModules/: CMakeLists.txt
native/cpp/CommonCpp/NativeModules/MessageOperationsUtilities/: MessageOperationsUtilities.cpp  MessageOperationsUtilities.h  MessageOperationsUtilitiesJNIHelper.h  MessageSpecs.h
native/cpp/CommonCpp/NativeModules/MessageOperationsUtilities/MessageSpecs/: ChangeRoleMessageSpec.h  ChangeSettingsMessageSpec.h  CreateEntryMessageSpec.h  CreateSidebarMessageSpec.h  CreateSubThreadMessageSpec.h  CreateThreadMessageSpec.h  DeleteEntryMessageSpec.h  EditEntryMessageSpec.h  MessageSpec.h  MultimediaMessageSpec.h  RestoreEntryMessageSpec.h  TextMessageSpec.h  UnsupportedMessageSpec.h  UpdateRelationshipMessageSpec.h
native/cpp/CommonCpp/NativeModules/PersistentStorageUtilities/ThreadOperationsUtilities/: ThreadOperationsJNIHelper.h
native/cpp/CommonCpp/Tools/: CMakeLists.txt
native/cpp/CommonCpp/grpc/: CMakeLists.txt
native/cpp/CommonCpp/grpc/_generated/: backup.pb.cc  backup.pb.h
native/cpp/CommonCpp/grpc/protos/: backup.proto  blob.proto  identity.proto  tunnelbroker.proto
native/data/: sqlite-context-provider.js
native/ios/: Podfile
native/media/: media-gallery-keyboard.react.js
native/navigation/: tab-navigator.react.js
native/redux/: persist.js
nix/: android-dev-env.nix  dev-shell.nix  fbjni.nix  mysql-up-linux.nix  overlay.nix  tunnelbroker.nix
scripts/: format_rust.sh
services/: .env  docker-compose.yml  package.json
services/backup/: CMakeLists.txt  Dockerfile  Dockerfile.m1
services/backup/src/: BackupServiceImpl.cpp  Constants.h  DatabaseManager.cpp  Tools.cpp  Tools.h
services/backup/src/DatabaseEntities/: BackupItem.cpp  BackupItem.h  LogItem.cpp  LogItem.h
services/backup/src/Reactors/client/blob/: BlobGetClientReactor.cpp  BlobGetClientReactor.h
services/backup/src/Reactors/server/: AddAttachmentReactor.cpp  AddAttachmentReactor.h  AddAttachmentsReactor.cpp  AddAttachmentsReactor.h  CreateNewBackupReactor.cpp  PullBackupReactor.cpp  PullBackupReactor.h  SendLogReactor.cpp  SendLogReactor.h
services/backup/src/grpc-client/: ServiceBlobClient.h
services/backup/test/: DatabaseManagerTest.cpp  ToolsTest.cpp
services/base-image/: Dockerfile  create_nix_image.sh  nix.Dockerfile
services/blob/: CMakeLists.txt  Dockerfile  Dockerfile.m1
services/commtest/: Cargo.toml  Dockerfile  build.rs
services/identity/: Cargo.toml
services/scripts/: build_base_image.sh  run_all_services.sh  run_integration_tests.sh  run_local_cloud.sh  run_server_image.sh  run_unit_tests.sh  test_service.sh
services/terraform/: dynamodb-test.tf  dynamodb.tf  run.sh
services/tunnelbroker/: CMakeLists.txt  Dockerfile  create_nix_image.sh  nix.Dockerfile
services/tunnelbroker/docker/: install_double.sh  install_folly.sh  install_glog.sh
services/tunnelbroker/rust/: Cargo.toml
services/tunnelbroker/rust-notifications/: Cargo.toml
services/tunnelbroker/src/: Constants.h  server.cpp
services/tunnelbroker/src/Amqp/: AmqpManager.cpp  AmqpManager.h
services/tunnelbroker/src/Database/: DatabaseManager.cpp  DatabaseManager.h  DeviceSessionItem.cpp  DeviceSessionItem.h  MessageItem.cpp  MessageItem.h  PublicKeyItem.cpp  PublicKeyItem.h  SessionSignItem.cpp  SessionSignItem.h
services/tunnelbroker/src/DeliveryBroker/: DeliveryBroker.cpp
services/tunnelbroker/src/Service/: TunnelbrokerServiceImpl.cpp  TunnelbrokerServiceImpl.h
services/tunnelbroker/src/Tools/: ConfigManager.cpp  Tools.cpp
services/tunnelbroker/test/: AmqpManagerTest.cpp  DatabaseManagerTest.cpp  ToolsTest.cpp
web/: SWMansionIcon.react.js  app.react.js  assets.js  menu-provider.react.js  theme.css  url-utils.js
web/calendar/: filter-panel.react.js
web/chat/: chat-input-bar.react.js  chat-message-list-container.react.js  chat-message-list.css  chat-message-list.react.js  chat-tabs.css  chat-thread-composer.css  chat-thread-composer.react.js  chat-thread-list-item-menu.css  chat-thread-list.css  chat-thread-list.react.js  composed-message.react.js  inline-sidebar.react.js  message-tooltip.react.js  thread-list-provider.js  thread-menu.react.js
web/components/: enum-settings-option-info.css  (+2 more)
(+122 files in other folders)
